frontend/test/should_fail/container_copy_constructor_005.grg
test t
{
	if {
		set<Node>(map<Edge,double>{}).empty();
	}
}
